# hejmai

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  Dockerfile.api  Dockerfile.bot  Dockerfile.interface  QWEN.md  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  web.sh
.streamlit/: secrets.toml.example
docs/: ANALISE_NUTRICAO.md  ARQUITETURA_AGENTES.md  ESPEC_LISTA_COMPRAS.md  GUIA_MIGRACAO.md  MIGRACAO_VIA_BOT.md  README.md  REFATORACAO_INTERFACE.md  VIGIA_DO_ESTOQUE.md  guia_agente.md
scripts/: atualizar_tags.py  backup_migracao.sh
specs/openapi/: openapi.yaml
specs/openapi/paths/: categorias.yaml  compras.yaml  ia.yaml  produtos.yaml  relatorios.yaml  status.yaml
specs/openapi/schemas/: categoria.yaml  common.yaml  compra.yaml  produto.yaml  relatorios.yaml  unificacao.yaml
src/hejmai/: analista_ia.py  config.py  crud.py  database.py  main.py  models.py  nlp.py  schemas.py  services.py  validator.py
src/hejmai/agents/: __init__.py  coordinator.py
src/hejmai/interface/: api_client.py  app.py  config.py
src/hejmai/scripts/: create_movimentacoes.py  migrate_compras_exclusao.py
src/hejmai/telegram_bot/: __init__.py  __main__.py  handlers.py
src/hejmai/vigia_estoque/: __init__.py  analise_consumo.py  vigia.py
src/interface/: __init__.py  api_client.py  app.py
src/interface/components/: __init__.py  budget.py  (+2 more)
src/telegram_bot/: api_client.py  main.py
tests/: conftest.py  test_editar_compra.py  test_exclusao_compra.py  test_unificar_produtos.py
tests/interface/: __init__.py  conftest.py  test_interface.py
(+9 files in other folders)
