[build-system]
requires = ["uv_build >= 0.10.9, <=0.11.6"]
build-backend = "uv_build"

[project]
name = "hejmai"
version = "0.1.0"
description = "Sistema de gestão de despensa e planejamento de refeições e economia"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "agno>=2.5.15",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "ollama>=0.6.1",
    "python-dotenv>=1.2.2",
    "python-telegram-bot[job-queue]>=22.7",
    "requests>=2.33.0",
    "ruff>=0.15.8",
    "sqlalchemy>=2.0.48",
    "streamlit>=1.55.0",
    "uvicorn>=0.41.0",
]

[project.scripts]
dev = "hejmai.main:start"
telegram = "hejmai.telegram_bot.__main__:start"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
markers = [
    "integration: mark test as requiring real API connection",
]
